updated index.html with a max width and centering, fixed input/textarea valign issue

--- a/scss/base/forms.scss
+++ b/scss/base/forms.scss
@@ -9,6 +9,11 @@ input:not([type='radio']) {
     font-size: 1rem;
     padding: #{$vertical-space / 2} #{$horizontal-space / 2};
     margin: #{$vertical-space / 2} #{$horizontal-space / 2};
+    vertical-align: middle;
+}
+
+textarea {
+    // align textarea to the top
     vertical-align: top;
 }
  
