--- a/scss/base/mixins.scss
+++ b/scss/base/mixins.scss
@@ -1,14 +1,3 @@
-// $Typescale
-// -------------------------------------//
-
-@mixin typescale($scale, $base, $value, $measure:'') {
-    @if $value == rem or $value == em {
-        font-size: context-calc($scale, $base, $value);
-    } @else {
-        font-size: $scale * 1px;
-    }
-}
-
 // $Headings
 // https://github.com/typeplate/starter-kit/issues/27
 // -------------------------------------//
@@ -34,9 +23,10 @@
 // @values              [ none | manual | auto ]
 
 @mixin hyphens($val) {
-    @each $prefix in $prefixes {
-        #{$prefix}hyphens: $val;
-    }
+    -webkit-hyphens: $val;
+    -moz-hyphens: $val;
+    -ms-hyphens: $val;
+    hyphens: $val;
 }
 
 // $Smallcaps
@@ -48,10 +38,11 @@
 // Some font-families don't support small caps
 // or don't provide them with their Webfont.
 
-@mixin smallcaps($color, $font-weight) {
-    @each $prefix in $prefixes {
-        #{$prefix}font-variant: small-caps;
-    }
+@mixin smallcaps($color, $font-weight) { 
+    -webkit-font-variant: small-caps;
+    -moz-font-variant: small-caps;
+    -ms-font-variant: small-caps;
+    font-variant: small-caps;
     font-weight: $font-weight;
     text-transform: lowercase;
     color: $color;
